--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.15__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.15__amd64-nightly.yaml
@@ -3669,6 +3669,72 @@ tests:
     test:
     - chain: openshift-e2e-test-qe-longduration
     workflow: cucushift-installer-rehearse-vsphere-ipi-zones
+- as: vsphere-ipi-f28-long-duration-hive
+  cron: 23 3 14,29 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      TEST_SCENARIOS: Cluster_Operator
+      TEST_TIMEOUT: "90"
+    test:
+    - as: output-kubeconfig
+      commands: cat ${KUBECONFIG}
+      from: tools
+      resources:
+        limits:
+          memory: 1Gi
+        requests:
+          cpu: "1"
+          memory: 1Gi
+    - ref: openshift-extended-test-longduration
+    - as: sleep
+      commands: sleep 64800
+      credentials:
+      - mount_path: /var/run/vault/vsphere
+        name: ci-route-53
+        namespace: test-credentials
+      from: tools
+      resources:
+        limits:
+          memory: 8Gi
+        requests:
+          cpu: "1"
+          memory: 4Gi
+      timeout: 20h0m0s
+  workflow: cucushift-installer-rehearse-vsphere-ipi
+- as: vsphere-ipi-f28-long-duration-hive-2
+  cron: 23 3 14,29 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      TEST_SCENARIOS: Cluster_Operator
+      TEST_TIMEOUT: "90"
+    test:
+    - as: output-kubeconfig
+      commands: cat ${KUBECONFIG}
+      from: tools
+      resources:
+        limits:
+          memory: 1Gi
+        requests:
+          cpu: "1"
+          memory: 1Gi
+    - ref: openshift-extended-test-longduration
+    - as: sleep
+      commands: sleep 64800
+      credentials:
+      - mount_path: /var/run/vault/vsphere
+        name: ci-route-53
+        namespace: test-credentials
+      from: tools
+      resources:
+        limits:
+          memory: 8Gi
+        requests:
+          cpu: "1"
+          memory: 4Gi
+      timeout: 20h0m0s
+    workflow: cucushift-installer-rehearse-vsphere-ipi
 - as: vsphere-ipi-zones-multisubnets-external-lb-f28
   cron: 59 19 26 * *
   steps:
